--- a/packages/plugin-webpack/package.json
+++ b/packages/plugin-webpack/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1",
+    "module-from-string": "^3.3.0",
     "ts-node": "^10.9.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
