--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "module": "ESNext",
+    "target": "ES2021",
+    "lib": ["ESNext", "ES2021", "DOM", "DOM.Iterable"],
+    "moduleResolution": "node",
+    "noEmit": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": false,
     "declaration": true,
@@ -17,6 +22,15 @@
     "noEmitOnError": true,
     "useDefineForClassFields": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@classes/*": ["./classes/*"],
+      "@helpers/*": ["./helpers/*"],
+      "@utils": ["./utils"],
+      "@types": ["./types"]
+    }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
