--- a/package.json
+++ b/package.json
@@ -45,14 +45,17 @@
     }
   ],
   "devDependencies": {
-    "typescript": "^5.0.4",
+    "@types/jest": "^29.5.0",
+    "commander": "^10.0.0",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.4",
     "vite": "^2.9.12",
     "vite-plugin-dts": "^1.2.0",
-    "vite-tsconfig-paths": "^3.5.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.0.5",
-    "@types/jest": "^29.5.0",
-    "commander": "^10.0.0"
+    "vite-tsconfig-paths": "^3.5.0"
   }
 }
