--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ftdigital/design-tokens",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "",
   "author": "FT Digital",
   "repository": {
@@ -47,7 +47,8 @@
   ],
   "devDependencies": {
     "@types/jest": "^29.5.0",
-    "commander": "^10.0.0",
+    "@types/nodemon": "^1.19.2",
+    "commander": "^11.0.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
@@ -55,8 +56,9 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4",
-    "vite": "^2.9.12",
-    "vite-plugin-dts": "^1.2.0",
-    "vite-tsconfig-paths": "^3.5.0"
+    "vite": "^4.3.9",
+    "vite-plugin-dts": "^2.3.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "glob": "^10.2.7"
   }
 }
