--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ftdigital/design-tokens",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "",
   "author": "FT Digital",
   "repository": {
@@ -33,7 +33,7 @@
     "test:dev": "yarn test --watch"
   },
   "bin": {
-    "designTokens": "./bin/index.js"
+    "design-tokens": "./bin/index.js"
   },
   "size-limit": [
     {
