--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "typescript": "^5.0.4",
     "vite": "^4.3.9",
     "vite-plugin-dts": "^2.3.0",
-    "vite-tsconfig-paths": "^4.2.0"
+    "vite-tsconfig-paths": "^4.2.0",
+    "styled-components": "^6.0.0-rc.6"
   }
 }
