--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ftdigital/atomic",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "author": "FT Digital",
   "repository": {
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/nodemon": "^1.19.2",
+    "@types/node": "^20.3.3",
     "commander": "^11.0.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
@@ -61,7 +62,6 @@
     "typescript": "^5.0.4",
     "vite": "^4.3.9",
     "vite-plugin-dts": "^2.3.0",
-    "vite-tsconfig-paths": "^4.2.0",
-    "styled-components": "^6.0.0-rc.6"
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
