--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ftdigital/atomic",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "",
   "author": "FT Digital",
   "repository": {
@@ -46,7 +46,8 @@
     }
   ],
   "dependencies": {
-    "glob": "^10.2.7"
+    "glob": "^10.2.7",
+    "prettier": "^2.8.8"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
@@ -55,7 +56,6 @@
     "commander": "^11.0.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
-    "prettier": "^2.8.8",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
