--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ftdigital/atomic",
-  "version": "0.0.20",
+  "version": "0.0.21",
   "description": "",
   "author": "FT Digital",
   "repository": {
@@ -47,13 +47,13 @@
   ],
   "dependencies": {
     "glob": "^10.2.7",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "commander": "^11.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/nodemon": "^1.19.2",
     "@types/node": "^20.3.3",
-    "commander": "^11.0.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.0.5",
