--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ftdigital/atomic",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "",
   "author": "FT Digital",
   "repository": {
@@ -48,16 +48,16 @@
   "dependencies": {
     "glob": "^10.2.7",
     "prettier": "^2.8.8",
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/nodemon": "^1.19.2",
     "@types/node": "^20.3.3",
     "jest": "^29.5.0",
-    "nodemon": "^2.0.22",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
