--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ftdigital/atomic",
-  "version": "0.0.30",
+  "version": "0.0.31",
   "description": "",
   "author": "FT Digital",
   "repository": {
@@ -46,18 +46,16 @@
       "limit": "10 KB"
     }
   ],
-  "dependencies": {
+  "devDependencies": {
     "glob": "^10.3.12",
-    "prettier": "^3.2.5",
     "commander": "^11.0.0",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2"
-  },
-  "devDependencies": {
+    "ts-node": "^10.9.2",
     "@types/jest": "^29.5.0",
     "@types/nodemon": "^1.19.6",
     "@types/node": "^20.12.7",
     "jest": "^29.7.0",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.4",
