--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ftdigital/atomic",
-  "version": "0.0.36",
+  "version": "0.0.37",
   "description": "",
   "author": "FT Digital",
   "repository": {
@@ -46,12 +46,15 @@
       "limit": "10 KB"
     }
   ],
-  "devDependencies": {
+  "dependencies": {
     "glob": "^10.3.12",
     "commander": "^11.0.0",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
     "@types/jest": "^29.5.0",
+    "@types/glob": "^8.1.0",
     "@types/nodemon": "^1.19.6",
     "@types/node": "^20.12.7",
     "jest": "^29.7.0",
